# wicci-shim-rust

./: .gitignore  Cargo.toml  Cargo.toml.orig  Makefile  README.md  local-status.org  typescript
Tests/: simple-test.sh
src/: Makefile  book_httpd.rs  db.rs  db.rs.orig  html.rs  html.rs.orig  lib.rs  macros.rs  main.rs  main.rs.orig  options.rs  options.rs.orig  tests.rs  tests.rs.orig  text.rs  thread_pool.rs  tinier.rs  tinier.rs.orig
