[package]
name = "shim"
version = "0.1.0"
authors = ["GregDavidson <greg.davidson+git@gmail.com>"]

[dependencies]
ascii = "0.5.4"
encoding = "0.2"
getopts = "0.2.14"
lazy_static = "0.1.15"
# libc = "0.1"
postgres = "0.10.0"
# postgres_large_object = "0.3.2"
regex = "0.1.41"
# regex_macros = "0.1.21"
tiny_http = "0.4.0"
url = "0.2.37"

## get latest versions of: [ none, right now! ]

# [dependencies.hyper]
# git = "https://github.com/hyperium/hyper"

# [dependencies.tiny_http]
# git = "https://github.com/frewsxcv/tiny-http"

# [dependencies.lazy_static]
# git = "https://github.com/Kimundi/lazy-static.rs"

# [dependencies.url]
# git = "https://github.com/servo/rust-url"
