[package]
name = "shim"
version = "0.1.0"
authors = ["GregDavidson <greg.davidson+git@gmail.com>"]

[dependencies]
getopts = "0.2.14"
postgres = "0.11.0"
# postgres_large_object = "0.4.0"
lazy_static = "0.1.15"
# libc = "0.1"
regex = "0.1.48"
#regex_macros = "0.1.27"
ascii = "0.6.0"
tiny_http = "0.5.1"
url = "0.5.3"
log = "0.3.5"
env_logger = "0.3.1"

## get latest versions of:

# [dependencies.hyper]
# git = "https://github.com/hyperium/hyper"

# [dependencies.tiny_http]
# git = "https://github.com/frewsxcv/tiny-http"

# [dependencies.lazy_static]
# git = "https://github.com/Kimundi/lazy-static.rs"

# [dependencies.url]
# git = "https://github.com/servo/rust-url"
